--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,7 +1,4 @@
-#root {
-    max-width: 2000px !important;
-    
-}
+
 /* hero-section css */
 img.hero-img {
     height: 100vh;
@@ -15,7 +12,27 @@ img.hero-img {
 
 
 /* services css */
-.Service-section{
-    background-image: url("/src/assets/img/services-bg.jpg");
-   
+.Service-section {
+    background-image: url(/src/assets/img/services-bg.jpg);
+    height: 100vh;
+}
+.service-inner-content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 80px 80px 20px 80px; 
+}
+.service-headline{
+    font-size: 30px;
+    color: #c71f3f;
+}
+.service-subline{
+    font-size: 20px;
+    color: white;
+    text-align: center;
+    margin: 0 15em;
+    line-height: 1.5em;
+}
+.card-container {
+    background-color: white;
 }
