--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -40,14 +40,18 @@ img.hero-img {
     align-items: center;
     padding: 0px 80px 20px 80px; 
 }
-.service-headline {
-    font-size: 33px;
-    color: #c71f3f;
-    margin-bottom: 20px;
-}
+
+
 h3.service-type-name {
     color: #c71f3f;
     padding-top: 20px;
+    font-weight: 700;
+    font-size: 21px;
+}
+.service-headline {
+    font-size: 35px;
+    color: #c71f3f;
+    margin-bottom: 20px;
 }
 .service-card {
     margin-top: 5em;
@@ -67,9 +71,11 @@ h3.service-type-name {
     height: 100%;
 }
 .service-card .container {
-    max-width: 1050px;
+    max-width: 1100px;
 }
-
+p.service-description {
+    font-weight: 500;
+}
 
 /* product section */
 .product-section .container {
