--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,5 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Teko:wght@300..700&display=swap');
+
 body{
     overflow-x: hidden;
+    font-family: 'Teko', sans-serif;
+}
+
+h1,h2,h3,h4,h5,h6{
+    font-family: inherit;
 }
 /* header css */
 nav.navbar {
