--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,12 +1,31 @@
 @import url('https://fonts.googleapis.com/css2?family=Teko:wght@300..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300..700&display=swap');
+
+@font-face {
+    font-family: 'Teko';
+    src: url('https://fonts.googleapis.com/css2?family=Teko:wght@300..700&display=swap');
+}
+
+@font-face {
+    font-family: 'Roboto', sans-serif;
+    src: url('https://fonts.googleapis.com/css2?family=Roboto:wght@300..700&display=swap');
+}
 
 body{
     overflow-x: hidden;
-    font-family: 'Teko', sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
-h1,h2,h3,h4,h5,h6{
-    font-family: inherit;
+div,a,p {
+    font-family: 'Roboto', sans-serif;
+}
+
+.font-roboto{
+    font-family: 'Roboto', sans-serif !important;
+}
+
+h1,h2,h3,h4,h5,h6 {
+    font-family: 'Teko';
 }
 /* header css */
 nav.navbar {
