--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -50,16 +50,33 @@ nav.navbar {
 
 header.trans-header {
     position: relative !important;
+    z-index: 1;
+}
+
+li.nav-item a:hover {
+    color: #d93e22 !important;
 }
 /* hero-section css */
 img.hero-img {
     height: 100vh;
     width: 100%;
     object-fit: cover;
+    display: block;
 }
-.Hero-section {
+
+a.navbar-brand.fw-bold.fs-3.d-none.d-lg-block.d-xl-block {
+    margin: 0px 3em;
+}
+.hero-section {
     height: 100vh;
     padding: 0;
+    position: relative;
+    display: inline-block;
+}
+img.hero-img-second {
+    position: absolute;
+    top: 35%;
+    left: 35%;
 }
 .hero .container {
     max-width: 100% !important;
@@ -67,6 +84,17 @@ img.hero-img {
     margin: 0px;
 }
 
+
+  .dark-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.4); /* Adjust opacity (0.6 for darkness) */
+    pointer-events: none; /* Prevents it from blocking interactions */
+  }
+  
 
 /* services css */
 .Service-section {
@@ -82,14 +110,14 @@ img.hero-img {
 
 
 h3.service-type-name {
-    color: #c71f3f;
+    color: #d93e22;
     padding-top: 20px;
     font-weight: 700;
     font-size: 21px;
 }
 .service-headline {
     font-size: 35px;
-    color: #c71f3f;
+    color: #d93e22;
     margin-bottom: 20px;
 }
 .service-card {
@@ -143,7 +171,7 @@ img.product-img {
     padding: 30px 20px;
 }
 a.buy-btn {
-    background-color: #C5203D;
+    background-color: #d93e22;
     color: white;
     font-size: 20px;
     padding: 0.5em 6.3em;
@@ -161,7 +189,7 @@ h2.product-section-title {
     font-weight: 700;
 }
 a.shop-more-btn {
-    background-color: #C5203E;
+    background-color: #d93e22;
     padding: 0.5em 4em;
     color: white;
     text-decoration: none;
@@ -193,7 +221,7 @@ h3.product-name {
 /* story section */
 .out-story-section {
     padding: 50px 0px;
-    background-color: #c71f3f;
+    background-color: #d93e22;
 }
 .story-content {
     text-align: center;
@@ -264,6 +292,12 @@ p.story-des {
     .product-section .container {
     max-width: 768px;
 }
+img.hero-img-second {
+    position: absolute;
+    top: 37%;
+    left: 15%;
+}
+
 }
 @media (max-width: 480px) {
     .subscribe-btn {
@@ -283,7 +317,14 @@ p.story-des {
     .subscribe-input {
         width: 325px !important;
     }
+    
     .subscribe-btn {
         width: 55%;
+    }
+    img.hero-img-second {
+        position: absolute;
+        top: 38%;
+        width: 26em;
+        left: 0%;
     }
 }
