--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -12,6 +12,7 @@
 }
 :root {
     --primary-color: #d93e22;
+    --white: #fff;
 }
 body{
     overflow-x: hidden;
@@ -405,7 +406,7 @@ p.story-des {
   width: 100%;
   height: 100%;
 }
-.swiper-slide img {
+.review-img img {
   display: block;
   width: 100%;
   object-fit: cover;
@@ -421,6 +422,42 @@ p.story-des {
 img.review-stars {height: 20px; margin-right: 10px;}
 
 /* end sldier */
+
+/* instagram feed */
+
+.instagram-section {
+  background-color: #010A1E;
+  font-family: sans-serif;
+  text-align: center;
+  padding: 80px 0;
+}
+.instagram-section .insta-sec-heading {
+  font-size: 53px;
+  color: var(--white);
+  font-weight: 700;
+  margin-bottom: 10px;
+  line-height: 1.3;
+}
+h3.instagram-username a {
+  display: block;
+  color: var(--white);
+  text-decoration: underline;
+  font-size: 33.33px;
+  font-weight: 700;
+  font-family: 'Roboto', sans-serif;
+}
+h3.instagram-username {margin-bottom: 60px;}
+.instagram-slider {
+  margin: 0;
+  padding: 0;
+}
+/* .img-wrap-inner {margin: 0 2px;} */
+.instagram-img {width: 100%;display: block;}
+.instagram-slider .swiper-wrapper{transition-timing-function: linear !important;}
+
+/* end instagram feed */
+
+
   @media (max-width: 120px) {
     a.buy-btn {
         padding: 0.5em 4.3em;
