--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -458,15 +458,16 @@ h3.instagram-username {margin-bottom: 60px;}
 /* end instagram feed */
 
 
-  @media (max-width: 120px) {
+@media (max-width: 1440px) {
     a.buy-btn {
-        padding: 0.5em 4.3em;
+        padding: 0.5em 2.6em !important;
     }
-  }
+}
 @media (max-width: 990px) {
     a.buy-btn {
-        padding: 0.5em 5.1em;
+        padding: 0.5em 5.1em !important;
     }
+    
     .product-card { 
         margin: 0px 15px 30px 15px;
     }
